Fix artifacts ouput, all scripts set to ./waf install

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,8 +59,10 @@ jobs:
     - name: Build windows-i386
       run: |
         git submodule init && git submodule update
-        ./waf.bat configure -T debug
-        ./waf.bat build
+        # ./waf.bat configure -T debug
+        # ./waf.bat build
+        ./waf.bat configure -T release
+        ./waf.bat install
         choco install zip
         zip -r build-windows-i386.zip build
     - uses: actions/upload-artifact@v2
