--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
     - name: Build linux-i386
       run: |
         scripts/build-ubuntu-i386.sh
+        rm -r build/*/*.o
+        rm -r build/*/*.pdb
         zip -r build-linux-i386.zip build
     - uses: actions/upload-artifact@v2
       with:
@@ -31,6 +33,8 @@ jobs:
     - name: Build linux-amd64
       run: |
         scripts/build-ubuntu-amd64.sh
+        rm -r build/*/*.o
+        rm -r build/*/*.pdb
         zip -r build-linux-amd64.zip build
     - uses: actions/upload-artifact@v2
       with:
@@ -45,6 +49,8 @@ jobs:
     - name: Build android-armv7a
       run: |
         scripts/build-android-armv7a.sh
+        rm -r build/*/*.o
+        rm -r build/*/*.pdb
         zip -r build-android-armv7a.zip build
     - uses: actions/upload-artifact@v2
       with:
@@ -62,7 +68,9 @@ jobs:
         # ./waf.bat configure -T debug
         # ./waf.bat build
         ./waf.bat configure -T release
-        ./waf.bat install
+        ./waf.bat build
+        rm -r .\build\*\*.o
+        rm -r .\build\*\*.pdb
         choco install zip
         zip -r build-windows-i386.zip build
     - uses: actions/upload-artifact@v2
