--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,10 @@ jobs:
         scripts/build-ubuntu-i386.sh
         rm -r build/*/*.o
         rm -r build/*/*.pdb
+        rm -r build/*/*/*.o
+        rm -r build/*/*/*.pdb
+        rm -r build/*/*/*/*.o
+        rm -r build/*/*/*/*.pdb
         zip -r build-linux-i386.zip build
     - uses: actions/upload-artifact@v2
       with:
@@ -35,6 +39,10 @@ jobs:
         scripts/build-ubuntu-amd64.sh
         rm -r build/*/*.o
         rm -r build/*/*.pdb
+        rm -r build/*/*/*.o
+        rm -r build/*/*/*.pdb
+        rm -r build/*/*/*/*.o
+        rm -r build/*/*/*/*.pdb
         zip -r build-linux-amd64.zip build
     - uses: actions/upload-artifact@v2
       with:
@@ -51,6 +59,10 @@ jobs:
         scripts/build-android-armv7a.sh
         rm -r build/*/*.o
         rm -r build/*/*.pdb
+        rm -r build/*/*/*.o
+        rm -r build/*/*/*.pdb
+        rm -r build/*/*/*/*.o
+        rm -r build/*/*/*/*.pdb
         zip -r build-android-armv7a.zip build
     - uses: actions/upload-artifact@v2
       with:
@@ -71,6 +83,10 @@ jobs:
         ./waf.bat build
         rm -r .\build\*\*.o
         rm -r .\build\*\*.pdb
+        rm -r .\build\*\*\*.o
+        rm -r .\build\*\*\*.pdb
+        rm -r .\build\*\*\*\*.o
+        rm -r .\build\*\*\*\*.pdb
         choco install zip
         zip -r build-windows-i386.zip build
     - uses: actions/upload-artifact@v2
