Remove more unnecessary stuff inside subdirectories

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
         rm -rf ./build/*/*.o ./build/*/*.pdb
         rm -rf ./build/*/*/*.o ./build/*/*/*.pdb
         rm -rf ./build/*/*/*/*.o ./build/*/*/*/*.pdb
+        rm -rf ./build/*/*/*/*/*.o ./build/*/*/*/*/*.pdb
+        rm -rf ./build/*/*/*/*/*/*.o ./build/*/*/*/*/*/*.pdb
         zip -r build-linux-i386.zip build
     - uses: actions/upload-artifact@v2
       with:
@@ -39,6 +41,8 @@ jobs:
         rm -rf ./build/*/*.o ./build/*/*.pdb
         rm -rf ./build/*/*/*.o ./build/*/*/*.pdb
         rm -rf ./build/*/*/*/*.o ./build/*/*/*/*.pdb
+        rm -rf ./build/*/*/*/*/*.o ./build/*/*/*/*/*.pdb
+        rm -rf ./build/*/*/*/*/*/*.o ./build/*/*/*/*/*/*.pdb
         zip -r build-linux-amd64.zip build
     - uses: actions/upload-artifact@v2
       with:
@@ -57,6 +61,8 @@ jobs:
         rm -rf ./build/*/*.o ./build/*/*.pdb
         rm -rf ./build/*/*/*.o ./build/*/*/*.pdb
         rm -rf ./build/*/*/*/*.o ./build/*/*/*/*.pdb
+        rm -rf ./build/*/*/*/*/*.o ./build/*/*/*/*/*.pdb
+        rm -rf ./build/*/*/*/*/*/*.o ./build/*/*/*/*/*/*.pdb
         rm -f android*.zip
         zip -r build-android-armv7a.zip build
     - uses: actions/upload-artifact@v2
@@ -82,6 +88,10 @@ jobs:
         rm -r .\build\*\*\*.pdb
         rm -r .\build\*\*\*\*.o
         rm -r .\build\*\*\*\*.pdb
+        rm -r .\build\*\*\*\*\*.o
+        rm -r .\build\*\*\*\*\*.pdb
+        rm -r .\build\*\*\*\*\*\*.o
+        rm -r .\build\*\*\*\*\*\*.pdb
         choco install zip
         zip -r build-windows-i386.zip build
     - uses: actions/upload-artifact@v2
