Simplify remove command stages

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,8 @@ jobs:
       run: |
         scripts/build-ubuntu-i386.sh
         ls -la
-        rm -rf ./build/*/*.o ./build/*/*.pdb
-        rm -rf ./build/*/*/*.o ./build/*/*/*.pdb
-        rm -rf ./build/*/*/*/*.o ./build/*/*/*/*.pdb
-        rm -rf ./build/*/*/*/*/*.o ./build/*/*/*/*/*.pdb
-        rm -rf ./build/*/*/*/*/*/*.o ./build/*/*/*/*/*/*.pdb
+        find ./build -type f -name "*.o" -delete
+        find ./build -type f -name "*.pdb" -delete
         find ./build -type d -empty -delete
         zip -r build-linux-i386.zip build
     - uses: actions/upload-artifact@v2
@@ -39,11 +36,8 @@ jobs:
       run: |
         scripts/build-ubuntu-amd64.sh
         ls -la
-        rm -rf ./build/*/*.o ./build/*/*.pdb
-        rm -rf ./build/*/*/*.o ./build/*/*/*.pdb
-        rm -rf ./build/*/*/*/*.o ./build/*/*/*/*.pdb
-        rm -rf ./build/*/*/*/*/*.o ./build/*/*/*/*/*.pdb
-        rm -rf ./build/*/*/*/*/*/*.o ./build/*/*/*/*/*/*.pdb
+        find ./build -type f -name "*.o" -delete
+        find ./build -type f -name "*.pdb" -delete
         find ./build -type d -empty -delete
         zip -r build-linux-amd64.zip build
     - uses: actions/upload-artifact@v2
@@ -60,11 +54,8 @@ jobs:
       run: |
         scripts/build-android-armv7a.sh
         ls -la
-        rm -rf ./build/*/*.o ./build/*/*.pdb
-        rm -rf ./build/*/*/*.o ./build/*/*/*.pdb
-        rm -rf ./build/*/*/*/*.o ./build/*/*/*/*.pdb
-        rm -rf ./build/*/*/*/*/*.o ./build/*/*/*/*/*.pdb
-        rm -rf ./build/*/*/*/*/*/*.o ./build/*/*/*/*/*/*.pdb
+        find ./build -type f -name "*.o" -delete
+        find ./build -type f -name "*.pdb" -delete
         find ./build -type d -empty -delete
         rm -f android*.zip
         zip -r build-android-armv7a.zip build
@@ -85,16 +76,8 @@ jobs:
         # ./waf.bat build
         ./waf.bat configure -T debug
         ./waf.bat build
-        rm -r .\build\*\*.o
-        rm -r .\build\*\*.pdb
-        rm -r .\build\*\*\*.o
-        rm -r .\build\*\*\*.pdb
-        rm -r .\build\*\*\*\*.o
-        rm -r .\build\*\*\*\*.pdb
-        rm -r .\build\*\*\*\*\*.o
-        rm -r .\build\*\*\*\*\*.pdb
-        rm -r .\build\*\*\*\*\*\*.o
-        rm -r .\build\*\*\*\*\*\*.pdb
+        del .\build\*.o /s
+        del .\build\*.pdb /s
         robocopy ".\build" ".\build" /S /move
         choco install zip
         zip -r build-windows-i386.zip build
