--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,21 @@ jobs:
       run: |
         scripts/build-ubuntu-i386.sh
         ls -la
-        find ./build -type f -name "*.o" -delete
-        find ./build -type f -name "*.pdb" -delete
-        find ./build -type d -empty -delete
-        zip -r build-linux-i386.zip build
+        mkdir ./build1
+        mkdir ./build1/bin
+        mkdir ./build1/game
+        mkdir ./build1/game/bin
+        find ./build -name "*.dll" -exec mv -t ./build1/bin {} +
+        find ./build -name "client.dll" -exec mv -t ./build1/game/bin {} +
+        find ./build -name "server.dll" -exec mv -t ./build1/game/bin {} +
+        find ./build -name "*_launcher" -exec mv -t ./build1 {} +
+        rm -rf build
+        mv ./build1 ./build
     - uses: actions/upload-artifact@v2
       with:
         name: Source Engine - Linux 32-bit
-        path: ./*.zip
+        path: ./build
+        if-no-files-found: error
 
   build-linux-amd64:
     runs-on: ubuntu-18.04
@@ -36,14 +43,21 @@ jobs:
       run: |
         scripts/build-ubuntu-amd64.sh
         ls -la
-        find ./build -type f -name "*.o" -delete
-        find ./build -type f -name "*.pdb" -delete
-        find ./build -type d -empty -delete
-        zip -r build-linux-amd64.zip build
+        mkdir ./build1
+        mkdir ./build1/bin
+        mkdir ./build1/game
+        mkdir ./build1/game/bin
+        find ./build -name "*.dll" -exec mv -t ./build1/bin {} +
+        find ./build -name "client.dll" -exec mv -t ./build1/game/bin {} +
+        find ./build -name "server.dll" -exec mv -t ./build1/game/bin {} +
+        find ./build -name "*_launcher" -exec mv -t ./build1 {} +
+        rm -rf build
+        mv ./build1 ./build
     - uses: actions/upload-artifact@v2
       with:
         name: Source Engine - Linux 64-bit
-        path: ./*.zip
+        path: ./build
+        if-no-files-found: error
 
   build-android-armv7a:
     runs-on: ubuntu-18.04
@@ -54,15 +68,22 @@ jobs:
       run: |
         scripts/build-android-armv7a.sh
         ls -la
-        find ./build -type f -name "*.o" -delete
-        find ./build -type f -name "*.pdb" -delete
-        find ./build -type d -empty -delete
         rm -f android*.zip
-        zip -r build-android-armv7a.zip build
+        mkdir ./build1
+        mkdir ./build1/bin
+        mkdir ./build1/game
+        mkdir ./build1/game/bin
+        find ./build -name "*.dll" -exec mv -t ./build1/bin {} +
+        find ./build -name "client.dll" -exec mv -t ./build1/game/bin {} +
+        find ./build -name "server.dll" -exec mv -t ./build1/game/bin {} +
+        find ./build -name "*_launcher" -exec mv -t ./build1 {} +
+        rm -rf build
+        mv ./build1 ./build
     - uses: actions/upload-artifact@v2
       with:
         name: Source Engine - Android armv7a
-        path: ./*.zip
+        path: ./build
+        if-no-files-found: error
 
   build-windows-i386:
     runs-on: windows-2019
@@ -72,19 +93,24 @@ jobs:
     - name: Build windows-i386
       run: |
         git submodule init && git submodule update
-        # ./waf.bat configure -T release
-        # ./waf.bat build
         ./waf.bat configure -T debug
         ./waf.bat build
-        Remove-Item -Path .\build\* -Include *.o -Recurse -Force
-        Remove-Item -Path .\build\* -Include *.pdb -Recurse -Force
+        md .\build1
+        md .\build1\bin
+        md .\build1\game
+        md .\build1\game\bin
+        Get-ChildItem -Recurse -Filter "*.dll" | Move-Item -Force -Verbose -Destination .\build1\bin
+        Get-ChildItem -Recurse -Filter "client.dll" | Move-Item -Force -Verbose -Destination .\build1\game\bin
+        Get-ChildItem -Recurse -Filter "server.dll" | Move-Item -Force -Verbose -Destination .\build1\game\bin
+        Get-ChildItem -Recurse -Filter "*.exe" | Move-Item -Force -Verbose -Destination .\build1
+        Remove-item .\build -Recurse -Force
+        ren .\build1 .\build
         robocopy ".\build" ".\build" /S /move
-        choco install zip
-        zip -r build-windows-i386.zip build
     - uses: actions/upload-artifact@v2
       with:
         name: Source Engine - Windows 32-bit
-        path: ./*.zip
+        path: ./build
+        if-no-files-found: error
 
   build-dedicated-windows-i386:
     runs-on: windows-2019
