--- a/.github/workflows/srcds_win.yml
+++ b/.github/workflows/srcds_win.yml
@@ -1,4 +1,4 @@
-name: srcds-test
+name: win-test
 
 on:
   push:
@@ -10,133 +10,99 @@ on:
 
 jobs:
   build-mod-64bit:
-    runs-on: ubuntu-20.04
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Build-hl2mp_cstrike_hl1
       run: |
-        wget https://dl.google.com/android/repository/android-ndk-r10e-linux-x86_64.zip -o /dev/null
-        sudo apt update;sudo apt upgrade;sudo apt install ccache
-        unzip android-ndk-r10e-linux-x86_64.zip > /dev/null
-        wget https://apt.llvm.org/llvm.sh
-        chmod +x llvm.sh
-        sudo ./llvm.sh 11
-        export PATH="/usr/lib/llvm-11/bin:$PATH"
-        mv android-ndk-r10e ndk/
-        export ANDROID_NDK_HOME=$(pwd)/ndk
-        mkdir ./andriod
-        mkdir ./andriod/hl2mp
-        mkdir ./andriod/hl1
-        mkdir ./andriod/hl1mp
-        mkdir ./andriod/cstrike
+        mkdir win
+        mkdir win/hl2mp
+        mkdir win/hl1
+        mkdir win/hl1mp
+        mkdir win/cstrike
         git submodule init;git submodule update
-        ./waf configure -T release -8 --togles --android=aarch64,host,21 --prefix=./andriod/cstrike --disable-warns --build-game=cstrike 
-        ./waf install --target=client,server -j4
-        ./waf configure -T release -8 --togles --android=aarch64,host,21 --prefix=./andriod/hl2mp --disable-warns --build-game=hl2mp 
-        ./waf install --target=client,server -j4
-        ./waf configure -T release -8 --togles --android=aarch64,host,21 --prefix=./andriod/hl1 --disable-warns --build-game=hl1 
-        ./waf install --target=client,server -j4
-        ./waf configure -T release -8 --togles --android=aarch64,host,21 --prefix=./andriod/hl1mp --disable-warns --build-game=hl1mp
+        waf.bat configure -T release -8 --prefix=win/cstrike --disable-warns --build-game=cstrike 
+        waf.bat install --target=server -j4
+        waf.bat configure -T release -8 --prefix=win/hl2mp --disable-warns --build-game=hl2mp 
+        waf.bat install --target=server -j4
+        waf.bat configure -T release -8 --prefix=win/hl1 --disable-warns --build-game=hl1 
+        waf.bat install --target=server -j4
+        waf.bat configure -T release -8 --prefix=win/hl1mp --disable-warns --build-game=hl1mp
         #test hldms
-        ./waf install --target=client,server -j4
-        #mv ./andriod/lib ./andriod/cstrike
-        cat build/config.log >./andriod/info.txt
+        waf.bat install --target=server -j4
+        #mv win/lib win/cstrike
+        # cat build/config.log >win/info.txt
         
     - uses: actions/upload-artifact@v3
       with:
         name: 64bit-mod_x4
-        path: ./andriod
+        path: win
         if-no-files-found: error
 
-  build-srceng-arm64:
-    runs-on: ubuntu-20.04
+  build-srceng-x86_64_dedicated:
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: build
       run: |
-        wget https://apt.llvm.org/llvm.sh
-        chmod +x llvm.sh
-        sudo ./llvm.sh 11
-        export PATH="/usr/lib/llvm-11/bin:$PATH"
-        wget https://dl.google.com/android/repository/android-ndk-r10e-linux-x86_64.zip -o /dev/null
-        unzip android-ndk-r10e-linux-x86_64.zip
-        export ANDROID_NDK_HOME=$PWD/android-ndk-r10e/
-        export NDK_HOME=$PWD/android-ndk-r10e/
-        mkdir ./andriod
+        mkdir win
         git submodule init;git submodule update
-        ./waf configure -T release -8 --togles --android=aarch64,host,21 --prefix=./andriod --disable-warns 
-        ./waf install -j4
-        cat build/config.log > ./andriod/info.txt
+        waf.bat configure -T release -8 --prefix=win --disable-warns -d
+        waf.bat install -j4
+        # cat build/config.log > win/info.txt
     - uses: actions/upload-artifact@v3
       with:
-        name: 64bit-srceng
-        path: ./andriod
+        name: 64bit-srceng-dedicated
+        path: win
         if-no-files-found: error
 
-  build-mod-32bit:
-    runs-on: ubuntu-20.04
+  build-mod-32bit-server:
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Build-hl2mp_cstrike_hl1
       run: |
-        wget https://dl.google.com/android/repository/android-ndk-r10e-linux-x86_64.zip -o /dev/null
-        sudo apt update;sudo apt upgrade;sudo apt install ccache
-        unzip android-ndk-r10e-linux-x86_64.zip > /dev/null
-        wget https://apt.llvm.org/llvm.sh
-        chmod +x llvm.sh
-        sudo ./llvm.sh 11
-        export PATH="/usr/lib/llvm-11/bin:$PATH"
-        mv android-ndk-r10e ndk/
-        export ANDROID_NDK_HOME=$(pwd)/ndk
-        mkdir ./andriod
-        mkdir ./andriod/hl2mp
-        mkdir ./andriod/hl1
-        mkdir ./andriod/hl1mp
-        mkdir ./andriod/cstrike
+        mkdir win
+        mkdir win/hl2mp
+        mkdir win/hl1
+        mkdir win/hl1mp
+        mkdir win/cstrike
         git submodule init;git submodule update
-        ./waf configure -T release --togles --android=armeabi-v7a-hard,host,21 --prefix=./andriod/cstrike --disable-warns --build-game=cstrike 
-        ./waf install --target=client,server -j4
-        ./waf configure -T release --togles --android=armeabi-v7a-hard,host,21 --prefix=./andriod/hl2mp --disable-warns --build-game=hl2mp 
-        ./waf install --target=client,server -j4
-        ./waf configure -T release --togles --android=armeabi-v7a-hard,host,21 --prefix=./andriod/hl1 --disable-warns --build-game=hl1 
-        ./waf install --target=client,server -j4
-        ./waf configure -T release --togles --android=armeabi-v7a-hard,host,21 --prefix=./andriod/hl1mp --disable-warns --build-game=hl1mp
+        waf.bat configure -T release --prefix=win/cstrike --disable-warns --build-game=cstrike 
+        waf.bat install --target=server -j4
+        waf.bat configure -T release --prefix=win/hl2mp --disable-warns --build-game=hl2mp 
+        waf.bat install --target=server -j4
+        waf.bat configure -T release --prefix=win/hl1 --disable-warns --build-game=hl1 
+        waf.bat install --target=server -j4
+        waf.bat configure -T release  -prefix=win/hl1mp --disable-warns --build-game=hl1mp
         #test hldms
-        ./waf install --target=client,server -j4
-        #mv ./andriod/lib ./andriod/cstrike
-        cat build/config.log >./andriod/info.txt
+        waf.bat install --target=server -j4
+        #mv win/lib win/cstrike
+        # cat build/config.log >win/info.txt
         
     - uses: actions/upload-artifact@v3
       with:
         name: 32bit-mod_x4
-        path: ./andriod
+        path: win
         if-no-files-found: error
 
-  build-srceng-arm32:
-    runs-on: ubuntu-20.04
+  build-srceng-x86-dedicated:
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: build
       run: |
-        wget https://apt.llvm.org/llvm.sh
-        chmod +x llvm.sh
-        sudo ./llvm.sh 11
-        export PATH="/usr/lib/llvm-11/bin:$PATH"
-        wget https://dl.google.com/android/repository/android-ndk-r10e-linux-x86_64.zip -o /dev/null
-        unzip android-ndk-r10e-linux-x86_64.zip
-        export ANDROID_NDK_HOME=$PWD/android-ndk-r10e/
-        export NDK_HOME=$PWD/android-ndk-r10e/
-        mkdir ./andriod
+        mkdir win
         git submodule init;git submodule update
-        ./waf configure -T release --togles --android=armeabi-v7a-hard,host,21 --prefix=./andriod --disable-warns 
-        ./waf install -j4
-        cat build/config.log > ./andriod/info.txt
+        waf.bat configure -T release --prefix=win --disable-warns -d
+        waf.bat install -j4
+        # cat build/config.log > win/info.txt
     - uses: actions/upload-artifact@v3
       with:
-        name: 32bit-srceng
-        path: ./andriod
+        name: 32bit-srceng-dedicated
+        path: win
         if-no-files-found: error
