--- a/.github/workflows/c-cppscrds32.yml
+++ b/.github/workflows/c-cppscrds32.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         #
         git submodule init;git submodule update
-        ./waf.bat configure -T release --prefix=./win --disable-warns --build-game=cstrike -d
+        ./waf.bat configure -T release --prefix=./win --disable-warns --build-game=cstrike
         
         ./waf.bat install --target=client,server -j4
         cat build/config.log > ./win/info.txt
