--- a/.github/workflows/c-cpplinux.yml
+++ b/.github/workflows/c-cpplinux.yml
@@ -4,55 +4,12 @@ name: linux-build
 on:
   push:
     branches:
-      - "*"
+      - "master"
   pull_request:
     branches:
-      - "*"
+      - "master"
 
 jobs:
-  build-srceng-linux-64:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build-cstrike
-      run: |
-        
-        git submodule init;git submodule update
-        sudo apt update;sudo apt upgrade;sudo apt-get install -f -y gdb libopenal-dev g++-multilib gcc-multilib libpng-dev libjpeg-dev libfreetype6-dev libfontconfig1-dev libcurl4-gnutls-dev libsdl2-dev zlib1g-dev libbz2-dev libedit-dev
-        ./waf configure -T release -8 --prefix=./linux --disable-warns --build-game=hl2 
-        sudo ./waf install -j4
-        
-        cat build/config.log >./linux/info.txt
-        
-    - uses: actions/upload-artifact@v3
-      with:
-        name: linux-source-engine-64
-        path: ./linux
-        if-no-files-found: error
-
-
-  build-srceng-linux-css64:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: |
-        sudo apt update
-        sudo apt upgrade
-        sudo apt-get install -f -y gdb libopenal-dev g++-multilib gcc-multilib libpng-dev libjpeg-dev libfreetype6-dev libfontconfig1-dev libcurl4-gnutls-dev libsdl2-dev zlib1g-dev libbz2-dev libedit-dev
-        git submodule init;git submodule update
-        ./waf configure -T release -8 --prefix=./linux --disable-warns --build-game=cstrike 
-        
-        sudo ./waf install --target=client,server -j4
-        cat build/config.log > ./linux/info.txt
-    - uses: actions/upload-artifact@v3
-      with:
-        name: cstrike-linux-64
-        path: ./linux
-        if-no-files-found: error
-
   build-srceng-linux-32:
     runs-on: ubuntu-latest
 
