--- a/.github/workflows/c-cpplinuxcsyy.yml
+++ b/.github/workflows/c-cpplinuxcsyy.yml
@@ -23,7 +23,7 @@ jobs:
         sudo apt-get install -f -y libopenal-dev:i386 g++-multilib gcc-multilib libpng-dev:i386 libjpeg-dev:i386 libfreetype6-dev:i386 libfontconfig1-dev:i386 libcurl4-gnutls-dev:i386 libsdl2-dev:i386 zlib1g-dev:i386 libbz2-dev:i386 libedit-dev:i386
         export PKG_CONFIG_PATH=/usr/lib/i386-linux-gnu/pkgconfig
         git submodule init;git submodule update
-        ./waf configure -T release --prefix=./linux --disable-warns --build-game=cstrike
+        ./waf configure -T release --prefix=./linux --disable-warns --build-game=cstrike --enable-opus
         sudo ./waf install -j4
         cat build/config.log > ./linux/info.txt
     - uses: actions/upload-artifact@v3
